--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My Flask Blog</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+   <meta charset="UTF-8">
+   <title>My Flask Blog</title>
+   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Welcome to My Blog </h1>
+   <h1>Welcome to My Blog </h1>
 
-    {% for post in posts %}
-        <article>
-            <h2>{{ post.title }}</h2>
-            <p><em>by {{ post.author }}</em></p>
-            <p>{{ post.content }}</p>
-            <hr>
-        </article>
-    {% endfor %}
+
+   <p><a href="{{ url_for('add') }}"> Add a New Post</a></p>
+
+
+   {% for post in posts %}
+       <article>
+           <h2>{{ post.title }}</h2>
+           <p><em>by {{ post.author }}</em></p>
+           <p>{{ post.content }}</p>
+           <hr>
+       </article>
+   {% endfor %}
 </body>
+
+
 </html>
