--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
    <h1>Welcome to My Blog </h1>
 
 
-   <p><a href="{{ url_for('add') }}"> Add a New Post</a></p>
+   <p><a href="{{ url_for('add') }}">Add a New Post</a></p>
 
 
    {% for post in posts %}
@@ -17,10 +17,17 @@
            <h2>{{ post.title }}</h2>
            <p><em>by {{ post.author }}</em></p>
            <p>{{ post.content }}</p>
+
+
+           <form method="POST" action="{{ url_for('delete', post_id=post.id) }}" style="display:inline;">
+               <button type="submit" onclick="return confirm('Are you sure you want to delete this post?');">
+                    Delete
+               </button>
+           </form>
+
+
            <hr>
        </article>
    {% endfor %}
 </body>
-
-
 </html>
