--- a/templates/index.html
+++ b/templates/index.html
@@ -8,24 +8,37 @@
 <body>
    <h1>Welcome to My Blog </h1>
 
+
    <p><a href="{{ url_for('add') }}">Add a New Post</a></p>
 
+
    {% for post in posts %}
-       <article>
-           <h2>{{ post.title }}</h2>
-           <p><em>by {{ post.author }}</em></p>
-           <p>{{ post.content }}</p>
-
-           <a href="{{ url_for('update', post_id=post.id) }}">Edit</a>
-           <form method="POST" action="{{ url_for('delete', post_id=post.id) }}" style="display:inline;">
-               <button type="submit" onclick="return confirm('Are you sure you want to delete this post?');">
-                    Delete
-               </button>
-           </form>
+   <article>
+       <h2>{{ post.title }}</h2>
+       <p><em>by {{ post.author }}</em></p>
+       <p>{{ post.content }}</p>
 
 
-           <hr>
-       </article>
-   {% endfor %}
+       <form method="POST" action="{{ url_for('like', post_id=post.id) }}" style="display:inline;">
+           <button type="submit">Like ({{ post.likes | default(0) }})</button>
+       </form>
+
+
+       <a href="{{ url_for('update', post_id=post.id) }}">Edit</a>
+
+
+       <form method="POST" action="{{ url_for('delete', post_id=post.id) }}" style="display:inline;">
+           <button type="submit" onclick="return confirm('Are you sure you want to delete this post?');">
+               Delete
+           </button>
+       </form>
+
+
+       <hr>
+   </article>
+{% endfor %}
+
+
 </body>
 </html>
+
